# liftlab

./: .dockerignore  .gitignore  DATA_LICENSE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: experiment.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: _schema.yml  customer_metrics.sql
dbt/models/staging/: _sources.yml  stg_customers.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_orders.sql
dbt/tests/: assert_customer_metrics_valid.sql
docs/: math_appendix.md
src/liftlab/: __init__.py  cli.py  config.py  paths.py  report.py
src/liftlab/causal/: __init__.py  estimators.py  scenario.py
src/liftlab/cuped/: __init__.py  cuped.py
src/liftlab/data/: __init__.py  build.py  download.py  population.py  warehouse.py
src/liftlab/estimators/: __init__.py  power.py  twosample.py
src/liftlab/simulation/: __init__.py  simulate.py  store.py  validation.py
src/liftlab/srm/: __init__.py  srm.py
src/liftlab/ui/: __init__.py  app.py
tests/: conftest.py  test_causal.py  test_cli.py  test_config.py  test_cuped.py  test_dbt_build.py  test_download.py  test_estimators.py  test_population.py  test_simulation.py  test_srm.py  test_ui.py  test_validation.py  test_warehouse.py
