[project]
name = "liftlab"
version = "0.1.0"
description = "Locally-runnable A/B testing & experimentation engine with variance reduction (CUPED), SRM detection, and causal-inference fallbacks."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "LiftLab" }]

# Top-level runtime dependencies needed for the data layer + estimators.
# Heavier optional stacks (UI, causal) live in dependency-groups below so that
# CI / `make test` stay fast and the scientific-stack resolve stays reproducible.
# numpy is pinned <2 to keep econml/dowhy (added in Phase 6) on a compatible ABI.
dependencies = [
    "numpy>=1.26,<2",
    "scipy>=1.11,<2",
    "pandas>=2.1,<3",
    "statsmodels>=0.14,<0.15",
    "scikit-learn>=1.3,<2",  # propensity-score (IPW) causal fallback
    "pyyaml>=6,<7",
    "duckdb>=1.0,<2",
    "dbt-duckdb>=1.8,<2",
]

[project.scripts]
liftlab = "liftlab.cli:main"

[dependency-groups]
# Installed by default by `uv sync`.
dev = [
    "pytest>=8,<9",
    "ruff>=0.6,<1",
]
# Streamlit report card, installed in the Docker UI image and for `make demo`.
ui = [
    "streamlit>=1.36,<2",
    "plotly>=5.22,<6",
]
# Observational causal fallback, DoWhy provides the cross-check + refutation/sensitivity
# tests. The DiD/IPW estimators themselves use only main deps (numpy + scikit-learn), so
# they work without this group; only the DoWhy cross-check needs it.
causal = [
    "dowhy>=0.11,<0.13",
    # DoWhy 0.12 calls networkx.algorithms.d_separated, removed in networkx 3.5.
    "networkx>=3.1,<3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liftlab"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "NPY",  # numpy-specific rules
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
]
# Greek statistical symbols (rho, alpha, theta, chi, ...) are intentional in user-facing strings.
allowed-confusables = ["ρ", "α", "θ", "χ", "µ", "β"]

[tool.ruff.lint.isort]
known-first-party = ["liftlab"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "slow: marks tests that run dbt / large simulations (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
